--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -26,7 +26,8 @@
 
 // 5. Components
 @import
-  'components/button';
+  'components/button',
+  'components/cards';
 
 // 6. Page-specific styles
 @import
